Revision history for Hailo

{{$NEXT}}

    - This release contains improvements for the default Words
      tokenizer. It's recommended that users rebuild their Hailo
      brains when upgrading. See UPGRADING in the Hailo manual.

    - Add URI support to the Words tokenizer. It will now use
      Regexp::Common's URI regex to tokenize URIs as-is.

      This improves performance a lot on input that contains URIs,
      previously Hailo would split them up nonsensically, which would
      inflate the token table a lot with little gain.

    - Preserve the capitalization of words that change case in the
      middle of the word. Examples include GumbyBRAIN, WoW, HoRRiBlE
      etc. Previously these and others that weren't 100% upper-case
      would all be lower cased.

    - Preserve the capitalization of words that are all upper-case
      followed by a non-word character followed by lower-case. This
      preserves words like KIA'd, FYIQ'ed and other things that are
      likely to be partial acronyms.

    - Twitter names. I.e. tokens matching @[A-Za-z0-9_]+ will be
      tokenized as-is. This ensures that Hailo users like
      Bot::Twatterhose don't corrupt their Twitter names.

    - Eliminate some redundant use of the regex engine in the Words
      tokenizer.

0.43 2010-05-11 19:54:36

    - Tests failed on 0.42 without Test::Synopsis due to invalid test plan.

    - Don't test with both Mouse and Moose on Windows. Failed with
      Strawberry Perl + dmake, see report
      07242729-b19f-3f77-b713-d32bba55d77f.

    - Skip t/storage/001_meta/switch-order.t on OpenBSD where it's
      known to fail, see report 07172161-b19f-3f77-b713-d32bba55d77f.

0.42 2010-05-10 21:26:45

    - Hailo should now work on Windows. Dependency on two modules that
      had Windows failures in their dependencies has been dropped.

    - Remove Term::ProgressBar dependency, use Term::Sk
      instead. Unlike Term::ProgressBar it doesn't depend on