@@ -7,4 +7,4 @@ use Test::More;
 
 plan skip_all => "You need the optional DBD::Pg module for PostgreSQL support" unless eval "require DBD::Pg;";
 
-Hailo::Test->new( storage => 'Pg' )->test_all_plan;
+Hailo::Test->new( storage => 'PostgreSQL' )->test_all_plan;
