@@ -7,4 +7,4 @@ use Test::More;
 
 plan skip_all => "You need the optional DBD::mysql module for MySQL support" unless eval "require DBD::mysql;";
 
-Hailo::Test->new( storage => 'mysql' )->test_all_plan;
+Hailo::Test->new( storage => 'MySQL' )->test_all_plan;
